# simple-python-package

./: README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: publish-to-pypi.yml  publish-to-testpypi.yml
notebooks/: lorenz_demo.ipynb  lorenze_demo.ipynb
src/: LORENZ_README.md  lorenz.py
