[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "lorenz"
version = "1.0.0"
description = "A simple Python package for visualizing the Lorenz attractor, a classic example of a chaotic system in dynamical systems theory."
authors = ["gperdrizet <george@perdrizet.org>"]
readme = "src/LORENZ_README.md"
license = "GPLv3"
packages = [{ include = "lorenz.py", from = "src" }]
exclude = ["notebooks/**"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["Python", "dynamical systems", "data visualization", "open-source"]

[tool.poetry.dependencies]
python = ">=3.10"
matplotlib = "*"
pandas = "*"

[tool.poetry.urls]
Homepage = "https://github.com/gperdrizet/simple-python-package"
Documentation = "https://gperdrizet.github.io/simple-python-package/README.MD"
Repository = "https://github.com/gperdrizet/simple-python-package"
Issues = "https://github.com/gperdrizet/simple-python-package/issues"
PyPI = "https://pypi.org/project/lorenz"